Improve tardiness and makespan calculation efficiency

--- a/Notebooks/TestRunComparer.ipynb
+++ b/Notebooks/TestRunComparer.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -115,23 +115,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30 files\n",
-      "Tardiness \tAvg:     12243.70 \tMed:       783.50 \tStd:     60568.74\n",
-      "Makespan \tAvg:      5510.47 \tMed:      2384.00 \tStd:     10286.11\n",
-      "Iterations \tAvg:   1662689.73 \tMed:    806688.00 \tStd:   1991063.49\n",
+      "440 files\n",
+      "Tardiness \tAvg:      2223.25 \tMed:       154.00 \tStd:     21188.43\n",
+      "Makespan \tAvg:      4345.01 \tMed:      1678.00 \tStd:      8565.32\n",
+      "Iterations \tAvg:   2349481.52 \tMed:   2025261.50 \tStd:   1682992.79\n",
       "Runtime \tAvg:        10.00 \tMed:        10.00 \tStd:         0.00\n"
      ]
     }
    ],
    "source": [
-    "calcAvgResults(\"C:/Users/Fabian/Desktop/Informatik/CO/Experiments/TryASmallSubset\")\n"
+    "calcAvgResults(\"C:/Users/Fabian/Desktop/Informatik/CO/Experiments/TryFasterVersionAllData(Sequential)\")\n"
    ]
   },
   {
