Single run to test improvements

--- a/Notebooks/TestRunComparer.ipynb
+++ b/Notebooks/TestRunComparer.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -132,6 +132,27 @@
    ],
    "source": [
     "calcAvgResults(\"C:/Users/Fabian/Desktop/Informatik/CO/Experiments/TryFasterVersionAllData(Sequential)\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "440 files\n",
+      "Tardiness \tAvg:       403.47 \tMed:       102.50 \tStd:      1151.18\n",
+      "Makespan \tAvg:      3856.53 \tMed:      1682.50 \tStd:      7431.53\n",
+      "Iterations \tAvg:   3128312.51 \tMed:   2915610.50 \tStd:   1261068.10\n",
+      "Runtime \tAvg:        10.00 \tMed:        10.00 \tStd:         0.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "calcAvgResults(\"C:/Users/Fabian/Desktop/Informatik/CO/Experiments/ImprovedTardynessGuideance(Seq)\")\n"
    ]
   },
   {
