Last commit was incomplete

--- a/Notebooks/FigureNotebooks.ipynb
+++ b/Notebooks/FigureNotebooks.ipynb
@@ -1412,477 +1412,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "1\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "1\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "1\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "1\n",
-      "1\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "1\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "1\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "1\n",
-      "1\n",
-      "0\n",
-      "0\n",
-      "1\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "1\n",
-      "0\n",
-      "0\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "1\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "1\n",
-      "0\n",
-      "0\n"
+      "Number of instances:  464 , instances where gurobi wins at least once:  17\n"
      ]
     }
    ],
@@ -1892,20 +1429,20 @@
     "solutions = glob.glob(\"*.info\")\n",
     "\n",
     "instances_nr = 0\n",
-    "instances_where_gurobi\n",
+    "instances_where_gurobi_wins = 0\n",
     "\n",
     "for instance in instances:\n",
     "    name = instance.split('.')[0]\n",
     "    for solution in solutions:\n",
     "        if name in solution or name.replace(\"s\", \"standard\") in solution or name.replace(\"p\", \"perez\") in solution or name.replace(\"t\", \"tight\") in solution:\n",
-    "            #print(solution)\n",
     "            f = open(solution, \"r\")\n",
     "            lines = f.read().split('\\n')\n",
     "            line = [line for line in lines if \"Gurobi wins\" in line][0]\n",
-    "            #print(line)\n",
-    "            print(int(line.split(\":\")[1]))\n",
+    "            instances_nr += 1\n",
+    "            if(int(line.split(\":\")[1]) > 0):\n",
+    "                instances_where_gurobi_wins += 1\n",
     "            \n",
-    "        "
+    "print(\"Number of instances: \", instances_nr, \", instances where gurobi wins at least once: \", instances_where_gurobi_wins)"
    ]
   },
   {
